# po2bats-autotools

./: .appveyor.yml  .autotools  .cirrus.yml  .codeclimate.yml  .cproject  .gitignore  .project  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  after_success.sh  aminclude_static.am  build_script.sh  config.status  configure  configure.ac  gettextize.exp  install_script.sh  install_tools.sh  is_root_user.sh  po2bats-0.1.0.tar.xz  script.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
m4/: .gitignore  ChangeLog
po/: .gitignore  ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  ja.gmo  ja.po  po2bats.pot
src/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  po2bats.sh  po2bats.sh.in
tests/: .gitignore  ChangeLog  atconfig  atlocal.in  ja.bats  mk_coverage.at  package.m4  po2bats.sh  sh_chk.at  test_1.at  test_1.at.in  test_10.at  test_10.at.in  test_11.at  test_11.at.in  test_12.at  test_12.at.in  test_13.at  test_13.at.in  test_14.at  test_14.at.in  test_15.at  test_15.at.in  test_16.at  test_16.at.in  test_17.at  test_17.at.in  test_18.at  test_18.at.in  test_19.at  test_19.at.in  test_2.at  test_2.at.in  test_20.at  test_20.at.in  test_21.at  test_21.at.in  test_22.at  test_22.at.in  test_23.at  (+48 more)
